post: Programmers 풀이 추가

--- a/_posts/Programmers/LV1/2021-05-17-sum.md
+++ b/_posts/Programmers/LV1/2021-05-17-sum.md
@@ -30,4 +30,4 @@ function solution(a, b) {
 }
 ```
 
-1. 주어진 두 정수 `a`와 `b`의 대소관계가 항상 일정하지 않기 때문에, 클 경우, 작을 경우를 생각해서 더한다.
+1. 주어진 두 정수 `a`와 `b`의 대소관계가 항상 일정하지 않기 때문에, 클 경우, 작을 경우를 생각해서 더한다
