--- a/_posts/LeetCode/Easy/2021-06-14-1331.md
+++ b/_posts/LeetCode/Easy/2021-06-14-1331.md
@@ -78,9 +78,19 @@ var arrayRankTransform = function (arr) {
   //     if (String(arr[i]) === key) answer.push(value);
   //   }
   // }
+
+  // map 이용
   arr = arr.map((item) => obj[item]);
+
+  // for문 이용
+  // let answer = [];
+  // for (let i = 0; i < arr.length; i++) {
+  //   answer.push(obj[arr[i]]);
+  // }
+
   return arr;
 };
 ```
 
 1. 주석처리한 문제가 되는 코드를 제거하고, 위 방식처럼 `arr`를 순회하면서 객체에 키로 `item`을 넣어주고 해당 값을 배열로 반환했다.
+2. 고차함수`map`과 `for`문의 시간차이는 별로 나지 않았다.
