docs: 디렉토리 변경

--- a/_posts/PS/2021-06-27-27.md
+++ b/_posts/PS/2021-06-27-27.md
@@ -1,6 +1,6 @@
 ---
-title: 27. Remove Element
-categories: [LeetCode]
+title: LeetCode - 27. Remove Element
+categories: [PS]
 comments: true
 ---
 
