--- a/_posts/PS/2021-06-27-88.md
+++ b/_posts/PS/2021-06-27-88.md
@@ -1,6 +1,6 @@
 ---
-title: 88. Merge Sorted Array
-categories: [LeetCode]
+title: LeetCode - 88. Merge Sorted Array
+categories: [PS]
 comments: true
 ---
 
