--- a/_posts/PS/2021-06-27-941.md
+++ b/_posts/PS/2021-06-27-941.md
@@ -1,6 +1,6 @@
 ---
-title: 941. Valid Mountain Array
-categories: [LeetCode]
+title: LeetCode - 941. Valid Mountain Array
+categories: [PS]
 comments: true
 ---
 
