--- a/_posts/PS/2021-06-28-102.md
+++ b/_posts/PS/2021-06-28-102.md
@@ -1,6 +1,6 @@
 ---
-title: 102. Binary Tree Level Order Traversal
-categories: [LeetCode]
+title: LeetCode - 102. Binary Tree Level Order Traversal
+categories: [PS]
 comments: true
 ---
 
