--- a/_posts/PS/2021-06-28-94.md
+++ b/_posts/PS/2021-06-28-94.md
@@ -1,6 +1,6 @@
 ---
-title: 94. Binary Tree Inorder Traversal
-categories: [LeetCode]
+title: LeetCode - 94. Binary Tree Inorder Traversal
+categories: [PS]
 comments: true
 ---
 
